--- a/seller-panel and website/index.html
+++ b/seller-panel and website/index.html
@@ -367,9 +367,7 @@
                                     <li class="nav-item">
                                         <a class="nav-link" href="./ecommerce-products.html">Manage Products</a>
                                     </li><!--end nav-item-->
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="./add-products.html">Add Products</a>
-                                    </li><!--end nav-item-->
+                                    <!--end nav-item-->
                                     <li class="nav-item">
                                         <a class="nav-link" href="./media-center.html">Media Center</a>
                                     </li>
@@ -659,13 +657,21 @@
                                     <!--end col-->
                                 </div>
                                 <!--end row-->
-                                <div class="mb-0 text-truncate text-muted mt-2 d-flex" style="gap: 10px;">
+                            <div class="mb-0 text-truncate text-muted mt-2 d-flex" style="gap: 10px;">
                                 <h5 class="text-success">1.5% <i class="fas fa-arrow-up"></i></h5>
                                 <p>From Yesterday Sale</p>
                             </div>
                             <div class="mb-0 text-truncate text-muted mt-1 d-flex" style="gap: 10px;">
                                 <h5 class="text-danger">0.5% <i class="fas fa-arrow-down"></i></h5>
                                 <p>From Yesterday Sale</p>
+                            </div>
+                            <div class="mb-0 text-truncate text-muted mt-2 d-flex" style="gap: 10px;">
+                                <h5 class="text-success">1.5% <i class="fas fa-arrow-up"></i></h5>
+                                <p>Weekly Sale</p>
+                            </div>
+                            <div class="mb-0 text-truncate text-muted mt-1 d-flex" style="gap: 10px;">
+                                <h5 class="text-danger">0.5% <i class="fas fa-arrow-down"></i></h5>
+                                <p>Monthly Sale</p>
                             </div>
                             </div>
                             <!--end card-body-->
@@ -693,6 +699,8 @@
                                     <div class="col-12 col-md-12">
                                         <h2 class="fs-22 mt-0 mb-1 fw-bold">$8365.00</h2>
                                         <p class="mb-0 text-truncate text-muted"><span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today</p>                                           
+                                        <p class="mb-0 text-truncate text-muted"><span class="text-danger"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today</p>                                           
+                                        <p class="mb-0 text-truncate text-muted"><span class="text-warning"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today</p>                                           
                                     </div><!--end col-->
                                     <div class="col-12 col-md-12 align-self-center text-start mt-2">
                                         <button type="button" class="btn btn-primary btn-sm px-2 mt-2 mt-md-0 ">View Report</button>  
@@ -725,6 +733,8 @@
                                     <div class="col-12 col-md-12">
                                         <h2 class="fs-22 mt-0 mb-1 fw-bold">722</h2>
                                         <p class="mb-0 text-truncate text-muted"><span class="text-success"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today</p>                                           
+                                        <p class="mb-0 text-truncate text-muted"><span class="text-danger"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today</p>                                           
+                                        <p class="mb-0 text-truncate text-muted"><span class="text-warning"><i class="mdi mdi-trending-up"></i>8.5%</span> New Sessions Today</p>                                           
                                     </div><!--end col-->
                                     <div class="col-12 col-md-12 align-self-center text-start mt-2">
                                         <button type="button" class="btn btn-outline-secondary btn-sm px-2 mt-2 mt-md-0 ">View  Report</button>  
@@ -770,10 +780,10 @@
                                     </div>
                                     <!--end col-->
                                     <div class="col-auto d-flex align-items-center gap-1">
-                                        <div>
+                                        <!-- <div>
                                             <label for="">Customize Date</label>                                  
                                                 <input style="margin-bottom:20px;" class="form-control datepicker-input" placeholder="Pick Customize Date" type="date" name="foo">
-                                        </div>      
+                                        </div>       -->
                                         <div class="dropdown">
                                             <a href="#" class="btn bt btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                                 <i class="icofont-calendar fs-5 me-1"></i>
@@ -784,6 +794,10 @@
                                                 <a class="dropdown-item" href="#">Last Week</a>
                                                 <a class="dropdown-item" href="#">Last Month</a>
                                                 <a class="dropdown-item" href="#">This Year</a>
+                                                <a class="dropdown-item">
+                                                    <label for="">Customize Date</label>                                  
+                                                        <input style="margin-bottom:20px;" class="form-control datepicker-input" placeholder="Pick Customize Date" type="date" name="foo">
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
