--- a/seller-panel and website/add-products.html
+++ b/seller-panel and website/add-products.html
@@ -580,6 +580,7 @@
     <div class="page-wrapper">
         <!-- Page Content-->
         <div class="page-content">
+            
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -597,22 +598,48 @@
                             <!--end card-header-->
                             <div class="card-body pt-0">
                                 <form>
-                                    <div class="mb-3">
-                                        <label for="exampleInputEmail1" class="form-label">Product Name</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1"
-                                            aria-describedby="emailHelp" placeholder="Enter email" />
-                                        <small id="emailHelp" class="form-text text-muted">Please enter at least 10
-                                            characters</small>
+                                    <div class="row d-flex">
+                                        <div class="col-6">
+                                            <div class="mb-3">
+                                                <label for="exampleInputEmail1" class="form-label">Product Name</label>
+                                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                                    aria-describedby="emailHelp" placeholder="Enter Product Name" />
+                                                <small id="emailHelp" class="form-text text-muted">Please enter at least 10
+                                                    characters</small>
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Categories</label>
+                                                <select class="form-select" id="inputGroupSelect04"
+                                                    aria-label="Example select with button addon">
+                                                    <option selected="">Choose Categories of your product...</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="mb-3">
-                                        <label for="exampleInputPassword1" class="form-label">Categories</label>
-                                        <select class="form-select" id="inputGroupSelect04"
-                                            aria-label="Example select with button addon">
-                                            <option selected="">Choose Categories of your product...</option>
-                                            <option value="1">One</option>
-                                            <option value="2">Two</option>
-                                            <option value="3">Three</option>
-                                        </select>
+                                    <div class="row d-flex">
+                                        <div class="col-6">
+                                                <div class="mb-3">
+                                                    <label class="form-label" for="message">Discription</label>
+                                                    <textarea class="form-control" rows="5" id="message"></textarea>
+                                                </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Varients</label>
+                                                <select class="form-select" id="inputGroupSelect04"
+                                                    aria-label="Example select with button addon">
+                                                    <option selected="">Choose Varients of your product...</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                </select>
+                                            </div>
+                                        </div>
                                     </div>
                                     <div class="form-check mb-3">
                                         <input class="form-check-input" type="checkbox" value=""
