--- a/seller-panel and website/add-products.html
+++ b/seller-panel and website/add-products.html
@@ -599,16 +599,39 @@
                             <div class="card-body pt-0">
                                 <form>
                                     <div class="row d-flex">
-                                        <div class="col-6">
+                                        <div class="col-3">
                                             <div class="mb-3">
                                                 <label for="exampleInputEmail1" class="form-label">Product Name</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1"
                                                     aria-describedby="emailHelp" placeholder="Enter Product Name" />
-                                                <small id="emailHelp" class="form-text text-muted">Please enter at least 10
-                                                    characters</small>
+                                                <small id="emailHelp" class="form-text text-muted">Please enter at least 10 characters</small>
                                             </div>
                                         </div>
-                                        <div class="col-6">
+                                        <div class="col-3">
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Categories</label>
+                                                <select class="form-select" id="inputGroupSelect04"
+                                                    aria-label="Example select with button addon">
+                                                    <option selected="">Choose Categories of your product...</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-3">
+                                            <div class="mb-3">
+                                                <label for="exampleInputPassword1" class="form-label">Categories</label>
+                                                <select class="form-select" id="inputGroupSelect04"
+                                                    aria-label="Example select with button addon">
+                                                    <option selected="">Choose Categories of your product...</option>
+                                                    <option value="1">One</option>
+                                                    <option value="2">Two</option>
+                                                    <option value="3">Three</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-3">
                                             <div class="mb-3">
                                                 <label for="exampleInputPassword1" class="form-label">Categories</label>
                                                 <select class="form-select" id="inputGroupSelect04"
@@ -723,6 +746,73 @@
                 </div>
                 <!--end row-->
             </div>
+
+
+
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="Appearance" aria-labelledby="AppearanceLabel">
+                <div class="offcanvas-header border-bottom justify-content-between">
+                  <h5 class="m-0 font-14" id="AppearanceLabel">Appearance</h5>
+                  <button type="button" class="btn-close text-reset p-0 m-0 align-self-center" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">  
+                    <h6>Account Settings</h6>
+                    <div class="p-2 text-start mt-3">
+                        <div class="form-check form-switch mb-2">
+                            <input class="form-check-input" type="checkbox" id="settings-switch1">
+                            <label class="form-check-label" for="settings-switch1">Auto updates</label>
+                        </div><!--end form-switch-->
+                        <div class="form-check form-switch mb-2">
+                            <input class="form-check-input" type="checkbox" id="settings-switch2" checked>
+                            <label class="form-check-label" for="settings-switch2">Location Permission</label>
+                        </div><!--end form-switch-->
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="settings-switch3">
+                            <label class="form-check-label" for="settings-switch3">Show offline Contacts</label>
+                        </div><!--end form-switch-->
+                    </div><!--end /div-->
+                    <h6>General Settings</h6>
+                    <div class="p-2 text-start mt-3">
+                        <div class="form-check form-switch mb-2">
+                            <input class="form-check-input" type="checkbox" id="settings-switch4">
+                            <label class="form-check-label" for="settings-switch4">Show me Online</label>
+                        </div><!--end form-switch-->
+                        <div class="form-check form-switch mb-2">
+                            <input class="form-check-input" type="checkbox" id="settings-switch5" checked>
+                            <label class="form-check-label" for="settings-switch5">Status visible to all</label>
+                        </div><!--end form-switch-->
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="settings-switch6">
+                            <label class="form-check-label" for="settings-switch6">Notifications Popup</label>
+                        </div><!--end form-switch-->
+                    </div><!--end /div-->               
+                </div><!--end offcanvas-body-->
+            </div>
+            <!--end Rightbar/offcanvas-->
+            <!--end Rightbar-->
+            <!--Start Footer-->
+            
+            <footer class="footer text-center text-sm-start d-print-none">
+                <div class="container-xxl">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card mb-0 rounded-bottom-0">
+                                <div class="card-body">
+                                    <p class="text-muted mb-0">
+                                        ©
+                                        <script> document.write(new Date().getFullYear()) </script>
+                                        Rizz
+                                        <span
+                                            class="text-muted d-none d-sm-inline-block float-end">
+                                            Crafted with
+                                            <i class="iconoir-heart text-danger"></i>
+                                            by Mannatthemes</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
         <!-- end page content -->
     </div>
