--- a/seller-panel and website/test.html
+++ b/seller-panel and website/test.html
@@ -3,72 +3,115 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<style>
-  .text-left{
-    text-align:left;
-  }
-.main-table{
-  width: 100%;
-  tbody{
-    tr{
-      display: flex;
-      gap: 5px;
-      .heading{
-        width: 20%;
-        text-align: left;
-      }
-      .colon{
-        display: flex;
-        align-items: center;
-      }
-      td{
-        text-align: left;
-        padding: 10px;
-        width: 50%;
-        border-bottom: 1px solid black;
-      }
+  <title>Baby Hand Pull Animation</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-  }
-}
-</style>
+
+    body, html {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #b3e5fc;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
+
+    /* Container with hidden section */
+    .container {
+      position: relative;
+      width: 100%;
+      max-width: 800px;
+      height: 600px;
+      background-color: #ffffff;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      border-radius: 10px;
+    }
+
+    /* Hidden content */
+    .content {
+      position: absolute;
+      top: -100%;
+      width: 100%;
+      height: 100%;
+      background-color: #f1f8e9;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      transition: top 1s ease, transform 0.4s ease;
+      border-radius: 0 0 20px 20px;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.15);
+    }
+
+    /* Paper effect */
+    .content.grabbed {
+      transform: rotateX(15deg) scaleY(0.95);
+      transition: transform 0.3s;
+    }
+
+    /* Baby hand SVG */
+    .baby-hand {
+      position: absolute;
+      top: -50px;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 80px;
+      height: 80px;
+      transition: top 0.8s ease;
+      z-index: 1;
+    }
+
+    .baby-hand.move-down {
+      top: 30px;
+    }
+
+    .content.move-down {
+      top: 0;
+    }
+
+  </style>
+</head>
 <body>
-  <table class="main-table">
-    <tbody>
-      <tr>
-        <th class="heading">Do Number </th>
-        <th class="colon">:</th>
-        <td>76/DO/07/2024</td>
-      </tr>
-      <tr>
-        <th class="heading"></th>
-        <th class="colon">:</th>
-        <td>
-          <img src="https://img.freepik.com/free-psd/barcode-illustration-isolated_23-2150584086.jpg" style="width: 100px;height: 50px;" alt="">
-        </td>
-      </tr>
-      <tr>
-        <th class="heading">Date</th>
-        <th class="colon">:</th>
-        <td>16 October 203</td>
-      </tr>
-      <tr>
-        <th class="heading">Submitted to</th>
-        <th class="colon">:</th>
-        <td>PT Naunsta Semesta</td>
-      </tr>
-      <tr>
-        <th class="heading">Purchase Order</th>
-        <th class="colon">:</th>
-        <td>67356</td>
-      </tr>
-      <tr>
-        <th class="heading">The Folowing</th>
-        <th class="colon">:</th>
-        <td>jo bhi hy w idher a jaega</td>
-      </tr> 
-    </tbody>
-  </table>
+
+<div class="container">
+  <!-- SVG Baby Hand -->
+  <svg class="baby-hand" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+    <path fill="#ff8a80" d="M12 2c-.77 0-1.47.3-2 .77C9.47 2.3 8.77 2 8 2 6.34 2 5 3.34 5 5v5.7c-.12-.03-.25-.05-.38-.05-1.25 0-2.24 1-2.24 2.24V20c0 1.1.9 2 2 2h1.68c1.06 0 2.09-.42 2.83-1.17l.98-.99 1.01.99c.73.75 1.75 1.17 2.8 1.17h1.68c1.1 0 2-.9 2-2v-7.76c0-1.24-1-2.24-2.24-2.24-.13 0-.26.02-.38.05V5c0-1.66-1.34-3-3-3z"/>
+  </svg>
+
+  <!-- Content Section -->
+  <section class="content" id="content">
+    <h1>Revealed Content</h1>
+    <p>This section appears as if it's being pulled down by a baby hand.</p>
+  </section>
+</div>
+
+<script>
+  window.onload = () => {
+    const babyHand = document.querySelector('.baby-hand');
+    const content = document.querySelector('.content');
+
+    // Start the animation after a short delay
+    setTimeout(() => {
+      // Move the hand down and grab the section
+      babyHand.classList.add('move-down');
+      content.classList.add('grabbed');
+
+      // After a short delay, pull the content down
+      setTimeout(() => {
+        content.classList.add('move-down');
+        content.classList.remove('grabbed'); // Remove grab effect after pulling down
+      }, 800);
+    }, 500); // Delay to simulate grabbing effect
+  };
+</script>
+
 </body>
 </html>
