--- a/seller-panel and website/web-checkout.html
+++ b/seller-panel and website/web-checkout.html
@@ -192,6 +192,16 @@ font-family: sans-serif;" type="text" class="field-text" placeholder="Last Name"
             </div>
             <div class="form-row">
               <div class="field">
+                <input style="font-size: 16px;
+font-family: sans-serif;" type="email" class="field-text" placeholder="Enter Email" />
+              </div>
+              <div class="field">
+                <input style="font-size: 16px;
+font-family: sans-serif;" type="tel" class="field-text" placeholder="Enter Phone Number" />
+              </div>
+            </div>
+            <div class="form-row">
+              <div class="field">
                 <select style="font-size: 14px;
 font-family: sans-serif;" name="" id="" class="field-select">
                   <option value="">State / City</option>
@@ -310,6 +320,7 @@ font-family: sans-serif;" type="text" class="field-text" placeholder="ZIP Code" 
           <div class="card-foot">
             <div class="card-subtitle">Subtotal<span>$1098</span></div>
             <div class="card-subtitle">Discount<span>$0</span></div>
+            <div class="card-subtitle">Shipping<span>$10</span></div>
             <div class="card-title">Total<span>$1098</span></div>
             <button class="btn btn-info btn-block btn-pill">Order Now</button>
           </div>
