--- a/seller-panel and website/web-index.html
+++ b/seller-panel and website/web-index.html
@@ -1135,7 +1135,7 @@
             </ul>
         </div>
         <div class="links">
-            <h6 class="text-c-white fw-700">Featured</h6>
+            <h6 class="text-c-white fw-700">Policies</h6>
             <ul>
                 <a href="./web-terms.html"><li>Terms & Condition</li></a>
                 <a href="./web-privacy-policy.html"><li>Privacy Policy</li></a>
