--- a/seller-panel and website/web-Product-details.html
+++ b/seller-panel and website/web-Product-details.html
@@ -249,7 +249,7 @@
                                 New york, USA
                             </div>
                             <div class="buttons">
-                              <a href=""><button class="btn btn-chat-us">CHAT HERE !</button></a>
+                              <a href=""><button class="btn btn-chat-us">Chat with Seller</button></a>
                               <a href=""><button class="btn btn-visit-store">VISIT STORE</button></a>
                             </div>
                         </div>
